[package]
name = "rmth"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Mazzaroth Wallet Manager - A Rust implementation for managing Mazzaroth blockchain accounts"
license = "MIT"

[dependencies]
# Core cryptography
secp256k1 = { version = "0.28", features = ["rand"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
pbkdf2 = "0.12"
hmac = "0.12"
bip39 = "2.0"
hdwallet = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI interface
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

# Database
sled = "0.34"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Network and HTTP
reqwest = { version = "0.11", features = ["json"] }

# Utilities
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
