[package]
name = "rwmth"
version = "0.1.0"
description = "Mazzaroth Wallet Manager - A Tauri desktop application for managing Mazzaroth blockchain accounts"
authors = ["dravenk <no-reply@github.com>"]
edition = "2024"
license = "MIT"

[lib]
name = "rwmth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Core cryptography
secp256k1 = { version = "0.28", features = ["rand"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
pbkdf2 = { version = "0.12", features = ["simple"] }
hmac = "0.12"
bip39 = "2.0"

# Serialization
bincode = "1.3"

# Database
sled = "0.34"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Network and HTTP
reqwest = { version = "0.11", features = ["json"] }

# Utilities
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

# File system operations
tokio = { version = "1.0", features = ["full"] }

